--- a/aula2/atividade1/index.html
+++ b/aula2/atividade1/index.html
@@ -6,7 +6,7 @@
     <title>Gestão academica</title>
 </head>
 <body>
-    <h1>Sistema de Gestão academica</h1>
+   <mark><h1>Sistema de Gestão academica</h1></mark>
     <h3>Manutenção de usuarios do sistema interno</h3>
     <form>
         Login:<input type="text" id="Login"/>
